from enum import Enum


class TipoMovimentacao(Enum):
    ENTRADA = "ENTRADA"
    SAIDA = "SAIDA"
